# opensteer

./: .env.example  .gitignore  CHANGELOG.md  CLOUD_TEST_FINAL_REPORT.md  CLOUD_TEST_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  TOOLING.md  agent-framework-analysis.md  debug-bisect.ts  debug-cheerio.ts  debug-clean-exact.ts  debug-clean-steps.ts  debug-cleaner-trace.ts  debug-engine-trace.ts  debug-final.ts  debug-html-children.ts  debug-render-trace.ts  debug-save-html.ts  debug-snapshot-deep.ts  debug-snapshot.ts  debug-why-hidden.ts  install.md  install.sh  list-browser-profiles.js  maersk-tracker.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json  target-search-api.ts  test-cloud-bluebook.js  (+18 more)
.agents/skills/: opensteer
.changeset/: README.md
.claude-plugin/: marketplace.json  plugin.json
.codex/environments/: environment.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  (+1 more)
docs/: README.md  agent-tooling-redesign.md  api-reference.md  cli-output-filtering.md  cli-reference.md  cli-surface-audit.md  cloud-integration.md  getting-started.md  governance.md  html-cleaning.md  instrumentation.md  live-web-tests.md  releasing.md  remote-integration.md  selectors.md  skills.md  workflows.md
examples/: attach-existing-session.ts  browser-backed-replay.ts  cloud-profile-upload.ts  gmail-attach-scraper.ts  log.ts  phase6-sdk.ts  target-airpods-scraper.ts  trapac-availability.ts
opensteer/: __init__.py  daemon.py  env.py  errors.py  helpers.py  http_client.py  paths.py  run.py  runtime.py  skill_installer.py
registry/: saved-network.sqlite-shm  saved-network.sqlite-wal
scripts/: build-runtime-artifact.mjs  check-packed-manifests.mjs  check-packed-secrets.mjs  check-root-tooling-policy.mjs  copy-opensteer-local-view-assets.mjs  opensteer-local.mjs  package-manifest-utils.mjs  publish-npm.mjs  sync-package-readme.mjs  sync-package-skills.mjs  target-search.mts
skills/: README.md
src/: action-failure.ts  action-wait.ts  api-plans.ts  config.ts  error-normalization.ts  extract-field-plan.ts  extract-value-normalization.ts  extract-value-reader.ts  index.ts  navigation.ts  opensteer.ts  oversteer.ts  types.ts
tests/: .test-app-url  config.browser.test.ts  config.test.ts  error-normalization.test.ts  globalSetup.ts  opensteer.real-mode-launch.test.ts  opensteer.real-mode.test.ts
tmp/: opensteer-cloud-page-double-check.ts  sdk-dual-real.mjs
(+402 files in other folders)
